feat: gestión masiva de estados con elegibilidad por flujo y módulo mis entregas
- Diálogos "Aplicar estado" en paquetes, consolidados y despachos: eliminada
  la opción por periodo; solo selección directa con filtro de elegibilidad
  basado en el orden del estado destino y el catálogo configurado.
- Despachos: el estado disponible respeta el predecesor inmediato según orden
  (Preparando envío → En tránsito → Entregado), sin saltar pasos; estados
  ALTERNO excluidos del listado de despachos.
- "Entregado a destinatario" habilitado como opción manual para admin/operario
  en el diálogo de despachos (excepción en DespachoService junto a enTransito).
- Estado común de paquetes por despacho calculado en backend (estadoRastreoComunId/
  Nombre/Orden, estadoMixto) y mostrado en cada fila del diálogo.
- Nuevo módulo "Mis entregas" para consignatarios: listado de despachos propios
  con detalle de piezas, exportación PDF/Excel y confirmación de entrega.
- Flyway V98–V105: estado confirmación entrega cliente, permisos mis entregas,
  estados guía master/consolidado operativo, parámetros por punto actualizados,
  estado asociar envío consolidado, limpieza de parámetros derivados.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>